tests/errors/test_04.x
// Identifier undeclared

fn main() -> void {
    let x: i64 = y;
}